<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/bg_info"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingTop="8dp"
        android:paddingEnd="20dp"
        android:paddingBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_bold"
            android:gravity="center_horizontal"
            android:text="@string/about"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/inter"
            android:gravity="center_horizontal"
            android:text="@string/aboutme"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btnLinkedIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:backgroundTint="#0A66C2"
            android:fontFamily="@font/inter_bold"
            android:padding="12dp"
            android:text="@string/linkedin"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnInstagram"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:backgroundTint="#E1306C"
            android:fontFamily="@font/inter_bold"
            android:padding="12dp"
            android:text="@string/instragram"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnOk"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/back" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>