<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/icon_share"
        app:borderWidth="0dp"
        app:tint="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <View
                android:id="@+id/vBackground"
                android:layout_width="match_parent"
                android:layout_height="420dp"
                tools:background="@color/goku_secondary" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="420dp">

                <RelativeLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/ivPhoto"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="8dp"
                        android:scaleType="fitCenter"
                        tools:src="@drawable/son_goku" />

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/inter_bold"
                        android:gravity="center"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        android:shadowColor="@color/black"
                        android:shadowDx="0"
                        android:shadowDy="0"
                        android:shadowRadius="6"
                        android:textColor="@color/white"
                        android:textSize="40sp"
                        tools:text="Son Goku" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:layout_marginStart="-140dp"
                    android:orientation="vertical"
                    android:paddingTop="16dp"
                    android:paddingEnd="12dp">

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/linearLayout"
                android:layout_marginBottom="60dp"
                android:orientation="vertical"
                android:padding="12dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/data"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:text="@string/race"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_bold"
                            android:text="@string/colon"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/tvRace"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/inter"
                            android:textColor="@color/black"
                            tools:text="Saiyan" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:text="@string/form"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_bold"
                            android:text="@string/colon"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/tvForm"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/inter"
                            android:textColor="@color/black"
                            tools:text="Super Saiyan" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:text="@string/height"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_bold"
                            android:text="@string/colon"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/tvHeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/inter"
                            android:textColor="@color/black"
                            tools:text="65 kg" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter"
                            android:text="@string/weight"
                            android:textColor="@color/black" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/inter_bold"
                            android:text="@string/colon"
                            android:textColor="@color/black" />

                        <TextView
                            android:id="@+id/tvWeight"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/inter"
                            android:textColor="@color/black"
                            tools:text="65 kg" />

                    </TableRow>

                </TableLayout>


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/inter_bold"
                    android:layout_marginTop="10dp"
                    android:text="@string/description"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/inter"
                    tools:text="@string/desc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/skill"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvSkill"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/inter"
                    tools:text="@string/desc" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:fontFamily="@font/inter_bold"
                    android:text="@string/references"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tvReferences"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/inter"
                    android:textColor="@color/goku"
                    tools:text="@string/desc" />


            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
